MyCookbook.Infrastructure/template.yaml
Description: Infrastructure for the MyCookbook application
Resources:
  MyCookbookVpc009A0C0B:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/Resource
  MyCookbookVpcMyCookbookPublicSubnetSubnet1SubnetCE8FB2AA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: aws-cdk:subnet-name
          Value: MyCookbookPublicSubnet
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1/Subnet
  MyCookbookVpcMyCookbookPublicSubnetSubnet1RouteTableF646542D:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1/RouteTable
  MyCookbookVpcMyCookbookPublicSubnetSubnet1RouteTableAssociationDFDA9F33:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet1RouteTableF646542D
      SubnetId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet1SubnetCE8FB2AA
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1/RouteTableAssociation
  MyCookbookVpcMyCookbookPublicSubnetSubnet1DefaultRoute0C51E39B:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MyCookbookVpcIGWC42B81E3
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet1RouteTableF646542D
    DependsOn:
      - MyCookbookVpcVPCGW957CB49A
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1/DefaultRoute
  MyCookbookVpcMyCookbookPublicSubnetSubnet1EIP8947E1C2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1/EIP
  MyCookbookVpcMyCookbookPublicSubnetSubnet1NATGateway4C305A94:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - MyCookbookVpcMyCookbookPublicSubnetSubnet1EIP8947E1C2
          - AllocationId
      SubnetId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet1SubnetCE8FB2AA
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1
    DependsOn:
      - MyCookbookVpcMyCookbookPublicSubnetSubnet1DefaultRoute0C51E39B
      - MyCookbookVpcMyCookbookPublicSubnetSubnet1RouteTableAssociationDFDA9F33
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet1/NATGateway
  MyCookbookVpcMyCookbookPublicSubnetSubnet2Subnet450B963B:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: aws-cdk:subnet-name
          Value: MyCookbookPublicSubnet
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet2
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet2/Subnet
  MyCookbookVpcMyCookbookPublicSubnetSubnet2RouteTable8C4AE5A9:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet2
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet2/RouteTable
  MyCookbookVpcMyCookbookPublicSubnetSubnet2RouteTableAssociation109749B7:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet2RouteTable8C4AE5A9
      SubnetId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet2Subnet450B963B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet2/RouteTableAssociation
  MyCookbookVpcMyCookbookPublicSubnetSubnet2DefaultRoute901645EC:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MyCookbookVpcIGWC42B81E3
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet2RouteTable8C4AE5A9
    DependsOn:
      - MyCookbookVpcVPCGW957CB49A
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPublicSubnetSubnet2/DefaultRoute
  MyCookbookVpcMyCookbookPrivateSubnetSubnet1SubnetE724F12C:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: aws-cdk:subnet-name
          Value: MyCookbookPrivateSubnet
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet1
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet1/Subnet
  MyCookbookVpcMyCookbookPrivateSubnetSubnet1RouteTable9C177B9A:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet1
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet1/RouteTable
  MyCookbookVpcMyCookbookPrivateSubnetSubnet1RouteTableAssociationD6A63847:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet1RouteTable9C177B9A
      SubnetId:
        Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet1SubnetE724F12C
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet1/RouteTableAssociation
  MyCookbookVpcMyCookbookPrivateSubnetSubnet1DefaultRoute016DDA04:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet1NATGateway4C305A94
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet1RouteTable9C177B9A
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet1/DefaultRoute
  MyCookbookVpcMyCookbookPrivateSubnetSubnet2Subnet40D379CC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: aws-cdk:subnet-name
          Value: MyCookbookPrivateSubnet
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet2
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet2/Subnet
  MyCookbookVpcMyCookbookPrivateSubnetSubnet2RouteTableC9438CFF:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet2
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet2/RouteTable
  MyCookbookVpcMyCookbookPrivateSubnetSubnet2RouteTableAssociationAF846316:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet2RouteTableC9438CFF
      SubnetId:
        Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet2Subnet40D379CC
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet2/RouteTableAssociation
  MyCookbookVpcMyCookbookPrivateSubnetSubnet2DefaultRoute2DB3EF57:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: MyCookbookVpcMyCookbookPublicSubnetSubnet1NATGateway4C305A94
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet2RouteTableC9438CFF
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookPrivateSubnetSubnet2/DefaultRoute
  MyCookbookVpcMyCookbookIsolatedSubnetSubnet1Subnet2B3D2721:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.4.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: aws-cdk:subnet-name
          Value: MyCookbookIsolatedSubnet
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet1
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet1/Subnet
  MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableB617BEA2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet1
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet1/RouteTable
  MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableAssociationCCC5C314:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableB617BEA2
      SubnetId:
        Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet1Subnet2B3D2721
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet1/RouteTableAssociation
  MyCookbookVpcMyCookbookIsolatedSubnetSubnet2Subnet998FC1D3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.5.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: aws-cdk:subnet-name
          Value: MyCookbookIsolatedSubnet
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet2
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet2/Subnet
  MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTable6D0DFFC0:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet2
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet2/RouteTable
  MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTableAssociation6DF482F6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTable6D0DFFC0
      SubnetId:
        Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet2Subnet998FC1D3
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookIsolatedSubnetSubnet2/RouteTableAssociation
  MyCookbookVpcIGWC42B81E3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/IGW
  MyCookbookVpcVPCGW957CB49A:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: MyCookbookVpcIGWC42B81E3
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/VPCGW
  MyCookbookVpcMyCookbookSecretsManagerEndpointSecurityGroupE2BC5075:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookSecretsManagerEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - MyCookbookVpc009A0C0B
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - MyCookbookVpc009A0C0B
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookSecretsManagerEndpoint/SecurityGroup/Resource
  MyCookbookVpcMyCookbookSecretsManagerEndpoint45D31712:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - MyCookbookVpcMyCookbookSecretsManagerEndpointSecurityGroupE2BC5075
            - GroupId
      ServiceName: com.amazonaws.us-east-1.secretsmanager
      SubnetIds:
        - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet1Subnet2B3D2721
        - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet2Subnet998FC1D3
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc
      VpcEndpointType: Interface
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookSecretsManagerEndpoint/Resource
  MyCookbookVpcMyCookbookS3Endpoint67C2A365:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableB617BEA2
        - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTable6D0DFFC0
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .s3
      Tags:
        - Key: Application
          Value: MyCookbook
        - Key: Name
          Value: MyCookbookInfrastructure/MyCookbookVpc
      VpcEndpointType: Gateway
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookVpc/MyCookbookS3Endpoint/Resource
  MyCookbookLambdaSecurityGroup480918DF:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for MyCookbook Lambda functions
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Application
          Value: MyCookbook
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookLambdaSecurityGroup/Resource
  MyCookbookConfigBucketA9DB3B7E:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName: g3-mycookbook-config-development
      Tags:
        - Key: Application
          Value: MyCookbook
      VersioningConfiguration:
        Status: Enabled
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookConfigBucket/Resource
  MyCookbookUserPool8F19F594:
    Type: AWS::Cognito::UserPool
    Properties:
      AccountRecoverySetting:
        RecoveryMechanisms:
          - Name: verified_email
            Priority: 1
      AdminCreateUserConfig:
        AllowAdminCreateUserOnly: false
      AliasAttributes:
        - email
      AutoVerifiedAttributes:
        - email
      EmailVerificationMessage: The verification code to your new account is {####}
      EmailVerificationSubject: Verify your new account
      LambdaConfig:
        PostAuthentication:
          Fn::GetAtt:
            - MyCookbookPostAuthFunctionF1D5005B
            - Arn
      Policies:
        PasswordPolicy:
          MinimumLength: 8
          RequireLowercase: true
          RequireNumbers: true
          RequireSymbols: false
          RequireUppercase: true
      Schema:
        - Mutable: true
          Name: email
          Required: true
        - Mutable: true
          Name: family_name
          Required: false
        - Mutable: true
          Name: given_name
          Required: false
        - Mutable: true
          Name: picture
          Required: false
      SmsVerificationMessage: The verification code to your new account is {####}
      UserPoolName: MyCookbookUserPool-Development
      UserPoolTags:
        Application: MyCookbook
      VerificationMessageTemplate:
        DefaultEmailOption: CONFIRM_WITH_CODE
        EmailMessage: The verification code to your new account is {####}
        EmailSubject: Verify your new account
        SmsMessage: The verification code to your new account is {####}
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookUserPool/Resource
  MyCookbookUserPoolPostAuthenticationCognitoC5E4AC5E:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - MyCookbookPostAuthFunctionF1D5005B
          - Arn
      Principal: cognito-idp.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - MyCookbookUserPool8F19F594
          - Arn
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookUserPool/PostAuthenticationCognito
  MyCookbookGoogleProviderD7D07153:
    Type: AWS::Cognito::UserPoolIdentityProvider
    Properties:
      AttributeMapping:
        email: email
        family_name: family_name
        given_name: given_name
        picture: picture
      ProviderDetails:
        client_id: YOUR_GOOGLE_CLIENT_ID
        client_secret: YOUR_GOOGLE_CLIENT_SECRET
        authorize_scopes: profile email openid
      ProviderName: Google
      ProviderType: Google
      UserPoolId:
        Ref: MyCookbookUserPool8F19F594
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookGoogleProvider/Resource
  MyCookbookFacebookProvider9E50ADD8:
    Type: AWS::Cognito::UserPoolIdentityProvider
    Properties:
      AttributeMapping:
        email: email
        given_name: name
      ProviderDetails:
        client_id: YOUR_FACEBOOK_APP_ID
        client_secret: YOUR_FACEBOOK_APP_SECRET
        authorize_scopes: public_profile,email
      ProviderName: Facebook
      ProviderType: Facebook
      UserPoolId:
        Ref: MyCookbookUserPool8F19F594
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookFacebookProvider/Resource
  MyCookbookUserPoolClient4DEC1D41:
    Type: AWS::Cognito::UserPoolClient
    Properties:
      AllowedOAuthFlows:
        - code
      AllowedOAuthFlowsUserPoolClient: true
      AllowedOAuthScopes:
        - email
        - openid
        - profile
      CallbackURLs:
        - mycookbook://oauth/callback
        - http://localhost:3000/oauth/callback
      ClientName: MyCookbookMauiApp-Development
      ExplicitAuthFlows:
        - ALLOW_USER_PASSWORD_AUTH
        - ALLOW_CUSTOM_AUTH
        - ALLOW_USER_SRP_AUTH
        - ALLOW_REFRESH_TOKEN_AUTH
      GenerateSecret: false
      LogoutURLs:
        - mycookbook://oauth/logout
        - http://localhost:3000/oauth/logout
      PreventUserExistenceErrors: ENABLED
      SupportedIdentityProviders:
        - COGNITO
        - Google
        - Facebook
      UserPoolId:
        Ref: MyCookbookUserPool8F19F594
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookUserPoolClient/Resource
  MyCookbookUserPoolDomain3D916298:
    Type: AWS::Cognito::UserPoolDomain
    Properties:
      Domain: mycookbook-development
      UserPoolId:
        Ref: MyCookbookUserPool8F19F594
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookUserPoolDomain/Resource
  MyCookbookLambdaExecutionRole0CA3E0C8:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
        - PolicyDocument:
            Statement:
              - Action:
                  - s3:GetObject
                  - s3:PutObject
                Effect: Allow
                Resource:
                  Fn::Join:
                    - ""
                    - - Fn::GetAtt:
                          - MyCookbookConfigBucketA9DB3B7E
                          - Arn
                      - /*
              - Action: secretsmanager:GetSecretValue
                Effect: Allow
                Resource:
                  Fn::Join:
                    - ""
                    - - "arn:"
                      - Ref: AWS::Partition
                      - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
            Version: "2012-10-17"
          PolicyName: S3AndSecretsAccessPolicy
      Tags:
        - Key: Application
          Value: MyCookbook
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookLambdaExecutionRole/Resource
  MyCookbookAuthFunction2559EE85:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ImageUri:
          Fn::Sub: 525722201980.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-525722201980-us-east-1:710ef498964f993bc932105a0d3628f26937016871631351045b724842bb35b5
      Environment:
        Variables:
          CONFIG_BUCKET_NAME:
            Ref: MyCookbookConfigBucketA9DB3B7E
          CONFIG_KEY: auth-config.json
          DB_SECRET_ARN:
            Fn::Join:
              - ""
              - - "arn:"
                - Ref: AWS::Partition
                - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
          DB_HOST: YOUR_LIGHTSAIL_DB_ENDPOINT
          DB_NAME: mycookbook
          DB_PORT: "5432"
      ImageConfig:
        Command:
          - MyCookbook.Lambda::MyCookbook.Lambda.Functions.AuthFunction::FunctionHandler
      MemorySize: 512
      PackageType: Image
      Role:
        Fn::GetAtt:
          - MyCookbookLambdaExecutionRole0CA3E0C8
          - Arn
      Tags:
        - Key: Application
          Value: MyCookbook
      Timeout: 30
      VpcConfig:
        SecurityGroupIds:
          - Fn::GetAtt:
              - MyCookbookLambdaSecurityGroup480918DF
              - GroupId
        SubnetIds:
          - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet1Subnet2B3D2721
          - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet2Subnet998FC1D3
    DependsOn:
      - MyCookbookLambdaExecutionRole0CA3E0C8
      - MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableAssociationCCC5C314
      - MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTableAssociation6DF482F6
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookAuthFunction/Resource
      aws:asset:path: asset.710ef498964f993bc932105a0d3628f26937016871631351045b724842bb35b5
      aws:asset:dockerfile-path: ./MyCookbook.Lambda/Dockerfile
      aws:asset:docker-build-args: {}
      aws:asset:property: Code.ImageUri
  MyCookbookCognitoAuthorizerFunction101EB965:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ImageUri:
          Fn::Sub: 525722201980.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-525722201980-us-east-1:710ef498964f993bc932105a0d3628f26937016871631351045b724842bb35b5
      Environment:
        Variables:
          USER_POOL_ID:
            Ref: MyCookbookUserPool8F19F594
      ImageConfig:
        Command:
          - MyCookbook.Lambda::MyCookbook.Lambda.Functions.CognitoAuthorizerFunction::FunctionHandler
      MemorySize: 256
      PackageType: Image
      Role:
        Fn::GetAtt:
          - MyCookbookLambdaExecutionRole0CA3E0C8
          - Arn
      Tags:
        - Key: Application
          Value: MyCookbook
      Timeout: 10
    DependsOn:
      - MyCookbookLambdaExecutionRole0CA3E0C8
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookCognitoAuthorizerFunction/Resource
      aws:asset:path: asset.710ef498964f993bc932105a0d3628f26937016871631351045b724842bb35b5
      aws:asset:dockerfile-path: ./MyCookbook.Lambda/Dockerfile
      aws:asset:docker-build-args: {}
      aws:asset:property: Code.ImageUri
  MyCookbookPostAuthFunctionF1D5005B:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ImageUri:
          Fn::Sub: 525722201980.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-525722201980-us-east-1:710ef498964f993bc932105a0d3628f26937016871631351045b724842bb35b5
      Environment:
        Variables:
          DB_SECRET_ARN:
            Fn::Join:
              - ""
              - - "arn:"
                - Ref: AWS::Partition
                - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
          DB_HOST: YOUR_LIGHTSAIL_DB_ENDPOINT
          DB_NAME: mycookbook
          DB_PORT: "5432"
      ImageConfig:
        Command:
          - MyCookbook.Lambda::MyCookbook.Lambda.Functions.PostAuthenticationFunction::FunctionHandler
      MemorySize: 512
      PackageType: Image
      Role:
        Fn::GetAtt:
          - MyCookbookLambdaExecutionRole0CA3E0C8
          - Arn
      Tags:
        - Key: Application
          Value: MyCookbook
      Timeout: 30
      VpcConfig:
        SecurityGroupIds:
          - Fn::GetAtt:
              - MyCookbookLambdaSecurityGroup480918DF
              - GroupId
        SubnetIds:
          - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet1Subnet2B3D2721
          - Ref: MyCookbookVpcMyCookbookIsolatedSubnetSubnet2Subnet998FC1D3
    DependsOn:
      - MyCookbookLambdaExecutionRole0CA3E0C8
      - MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableAssociationCCC5C314
      - MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTableAssociation6DF482F6
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookPostAuthFunction/Resource
      aws:asset:path: asset.710ef498964f993bc932105a0d3628f26937016871631351045b724842bb35b5
      aws:asset:dockerfile-path: ./MyCookbook.Lambda/Dockerfile
      aws:asset:docker-build-args: {}
      aws:asset:property: Code.ImageUri
  MyCookbookPostAuthFunctionMyCookbookCognitoInvokePermissionCE15A1AE:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - MyCookbookPostAuthFunctionF1D5005B
          - Arn
      Principal: cognito-idp.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - MyCookbookUserPool8F19F594
          - Arn
    DependsOn:
      - MyCookbookVpcMyCookbookIsolatedSubnetSubnet1RouteTableAssociationCCC5C314
      - MyCookbookVpcMyCookbookIsolatedSubnetSubnet2RouteTableAssociation6DF482F6
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookPostAuthFunction/MyCookbookCognitoInvokePermission
  MyCookbookEcsClusterCEE07B5D:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: MyCookbookCluster-Development
      Tags:
        - Key: Application
          Value: MyCookbook
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookEcsCluster/Resource
  MyCookbookFargateSecurityGroupE6086B3D:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for MyCookbook Fargate tasks
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Application
          Value: MyCookbook
      VpcId:
        Ref: MyCookbookVpc009A0C0B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookFargateSecurityGroup/Resource
  MyCookbookTaskExecutionRoleFDDAE379:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Policies:
        - PolicyDocument:
            Statement:
              - Action: secretsmanager:GetSecretValue
                Effect: Allow
                Resource:
                  Fn::Join:
                    - ""
                    - - "arn:"
                      - Ref: AWS::Partition
                      - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
            Version: "2012-10-17"
          PolicyName: SecretsAccessPolicy
      Tags:
        - Key: Application
          Value: MyCookbook
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookTaskExecutionRole/Resource
  MyCookbookTaskExecutionRoleDefaultPolicy90236EEE:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - :ecr:us-east-1:525722201980:repository/cdk-hnb659fds-container-assets-525722201980-us-east-1
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - MyCookbookApiLogGroup273C83D2
                - Arn
          - Action:
              - secretsmanager:GetSecretValue
              - secretsmanager:DescribeSecret
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development-??????
        Version: "2012-10-17"
      PolicyName: MyCookbookTaskExecutionRoleDefaultPolicy90236EEE
      Roles:
        - Ref: MyCookbookTaskExecutionRoleFDDAE379
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookTaskExecutionRole/DefaultPolicy/Resource
  MyCookbookTaskRoleAC0B2C1B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Policies:
        - PolicyDocument:
            Statement:
              - Action: secretsmanager:GetSecretValue
                Effect: Allow
                Resource:
                  Fn::Join:
                    - ""
                    - - "arn:"
                      - Ref: AWS::Partition
                      - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
            Version: "2012-10-17"
          PolicyName: DatabaseAccessPolicy
      Tags:
        - Key: Application
          Value: MyCookbook
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookTaskRole/Resource
  MyCookbookApiLogGroup273C83D2:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/MyCookbook-api-development
      RetentionInDays: 7
      Tags:
        - Key: Application
          Value: MyCookbook
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookApiLogGroup/Resource
  MyCookbookApiTaskDefinition3984B657:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: ASPNETCORE_ENVIRONMENT
              Value: Development
            - Name: DB_HOST
              Value: YOUR_LIGHTSAIL_DB_ENDPOINT
            - Name: DB_NAME
              Value: mycookbook
            - Name: DB_PORT
              Value: "5432"
          Essential: true
          Image:
            Fn::Sub: 525722201980.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-525722201980-us-east-1:0ebcbbe14fb26d99bcfe85be087eedd33d7554c0e93d3c93224fa0055e97aafd
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: MyCookbookApiLogGroup273C83D2
              awslogs-stream-prefix: api
              awslogs-region: us-east-1
          Name: MyCookbookApiContainer
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
          Secrets:
            - Name: DB_SECRET
              ValueFrom:
                Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - MyCookbookTaskExecutionRoleFDDAE379
          - Arn
      Family: MyCookbookInfrastructureMyCookbookApiTaskDefinition1AC76545
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Application
          Value: MyCookbook
      TaskRoleArn:
        Fn::GetAtt:
          - MyCookbookTaskRoleAC0B2C1B
          - Arn
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookApiTaskDefinition/Resource
  MyCookbookApiService5F9E92D5:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: MyCookbookEcsClusterCEE07B5D
      DeploymentConfiguration:
        Alarms:
          AlarmNames: []
          Enable: false
          Rollback: false
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 0
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - MyCookbookFargateSecurityGroupE6086B3D
                - GroupId
          Subnets:
            - Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet1SubnetE724F12C
            - Ref: MyCookbookVpcMyCookbookPrivateSubnetSubnet2Subnet40D379CC
      Tags:
        - Key: Application
          Value: MyCookbook
      TaskDefinition:
        Ref: MyCookbookApiTaskDefinition3984B657
    DependsOn:
      - MyCookbookTaskRoleAC0B2C1B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookApiService/Service
  MyCookbookApiServiceTaskCountTarget39C678F4:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MaxCapacity: 2
      MinCapacity: 0
      ResourceId:
        Fn::Join:
          - ""
          - - service/
            - Ref: MyCookbookEcsClusterCEE07B5D
            - /
            - Fn::GetAtt:
                - MyCookbookApiService5F9E92D5
                - Name
      RoleARN:
        Fn::Join:
          - ""
          - - "arn:"
            - Ref: AWS::Partition
            - :iam::525722201980:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService
      ScalableDimension: ecs:service:DesiredCount
      ScheduledActions:
        - ScalableTargetAction:
            MaxCapacity: 2
            MinCapacity: 1
          Schedule: cron(0 13 * * ? *)
          ScheduledActionName: MyCookbookScaleUpSchedule
        - ScalableTargetAction:
            MaxCapacity: 0
            MinCapacity: 0
          Schedule: cron(0 1 * * ? *)
          ScheduledActionName: MyCookbookScaleDownSchedule
      ServiceNamespace: ecs
    DependsOn:
      - MyCookbookTaskRoleAC0B2C1B
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/MyCookbookApiService/TaskCount/Target/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/3VTy47bMAz8lr0ryqNAgT30kHUeCFCkRrzNdcEojMvGFg2JShAY/vdCfiTpAgsdOBqNBqRIzfRs9qqnL3D1I3M8jwo66DoTMGcFV/9Ro5npel8ZlZzsPk1UGg4FmSwcLErkHmjHQfAdDgU++Ac3954NgRDbuziC5SaNYQuyBsEr3FTq6AKCD+ONFXQW74Iuk343FwHzp0QrqtWdwOC+Mkt7rJisqAxNcCS3teNQtYl9JvZpclf3pk8GjfLfdP0WzLlLpkONMpxbEtb1b48uZS7i4R0PYHNEKyS31PGFjujWzHn3Pl8pvry6AoMH5vNdkBQUq37y6plhu+ASyD4LOqZRBZSHI+g6OdkUXUnex7Ys2JzRbUrIcRWsGVo14EYRlLrecVdAG1MuyLQd6VCj0LgP8B7F6ye/eWTimd5hxZ6E3e0NPCo0XtdJEbygizYDXIHLIY6OPy [...]
    Metadata:
      aws:cdk:path: MyCookbookInfrastructure/CDKMetadata/Default
Outputs:
  ConfigBucketName:
    Description: S3 bucket for configuration files
    Value:
      Ref: MyCookbookConfigBucketA9DB3B7E
  DbSecretArn:
    Description: ARN of the database credentials secret
    Value:
      Fn::Join:
        - ""
        - - "arn:"
          - Ref: AWS::Partition
          - :secretsmanager:us-east-1:525722201980:secret:mycookbook/db/development
  VpcId:
    Description: VPC ID for Lambda functions
    Value:
      Ref: MyCookbookVpc009A0C0B
  LambdaSecurityGroupId:
    Description: Security Group ID for Lambda functions
    Value:
      Fn::GetAtt:
        - MyCookbookLambdaSecurityGroup480918DF
        - GroupId
  UserPoolId:
    Description: Cognito User Pool ID
    Value:
      Ref: MyCookbookUserPool8F19F594
  UserPoolClientId:
    Description: Cognito User Pool Client ID for MAUI App
    Value:
      Ref: MyCookbookUserPoolClient4DEC1D41
  UserPoolDomain:
    Description: Cognito User Pool Domain
    Value:
      Ref: MyCookbookUserPoolDomain3D916298
  CognitoHostedUIUrl:
    Description: Cognito Hosted UI URL
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: MyCookbookUserPoolDomain3D916298
          - .auth.us-east-1.amazoncognito.com
  EcsClusterName:
    Description: ECS Cluster Name for Fargate API
    Value:
      Ref: MyCookbookEcsClusterCEE07B5D
  FargateServiceName:
    Description: Fargate Service Name for API
    Value:
      Fn::GetAtt:
        - MyCookbookApiService5F9E92D5
        - Name
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
